# A1

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.metrics-sandbox.yml  docker-compose.yml  pyproject.toml  项目审查说明.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly_benchmark.yml  real_external.yml  staging_full_validation.yml
backend/: __init__.py  observability.py  schemas.py
backend/agents/: README.md  __init__.py  _runtime.py  evidence_normalizer.py  ports.py
backend/api/: __init__.py  api_errors.py  auth.py  deps.py  lifespan.py  main.py  rate_limit.py  schemas_http.py
backend/application/: README.md  __init__.py
backend/compat/: __init__.py  compat_shim_registry.json
backend/config/: __init__.py  _helpers.py  ai_model.py  budget_policy.py  check_key.py  cost_rule.py  feature_flags.py  metric_targets.py  router_policy.py  safe_rule.py  search_and_storage.py  settings.py  tools_and_media.py  upload_limit.py  url_rule.py  validate_startup.py
backend/core/: __init__.py  cost_recorder.py  debug_trace.py  errors.py  log_redaction.py  observability.py  pipeline_debug.py  request_context.py  structured_logger.py
backend/domain/: __init__.py  session_types.py
backend/entry/: __init__.py  task_dispatcher.py
backend/knowledge/: ingest_service.py  rag_service.py
backend/legacy/: __init__.py
backend/llm/: __init__.py  asr.py  router.py  subtitle_tidy.py
backend/mcp_local/: __init__.py  mcp_client.py  stdio_real.py
backend/mcp_servers/: __init__.py  min_server.py  video_min_server.py
backend/rag/: __init__.py  hybrid_retrieve.py  ingest.py  pending_schema.py  pending_store.py  pg_chunks.py  result_cleaner.py  retrieval_provenance.py  retrieval_query.py  retrieve_knowledge.py  retrieve_knowledge_core.py  retriever.py  schema.py  store.py  video_ingest.py
backend/retrieval/: __init__.py  embedding_store.py  hybrid_pipeline.py  semantic_retriever.py
backend/services/: README.md  __init__.py  agno_chat_service.py  (+2 more)
data/: README.md
docs/: README.md
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
scripts/: aggregate_product_metrics.py  audit_legacy_entry_symbols.py  audit_migration_ledgers.py  audit_project.py  audit_test_patch_depth.py  build_embeddings.py  check_compat_consumption.py  check_compat_field_writes.py  check_compat_retirement.py  check_compat_shims.py  check_direct_getenv.py  check_env.py  check_eval_observability_fields.py  check_eval_text_rule_age.py  check_evidence_freshness.py  check_fast_lane_boundaries.py  check_field_owner_writes.py  check_forbidden_legacy_imports.py  check_frozen_chat_modules.py  check_history_context_imports.py  check_import_boundaries.py  check_legacy_entry_imports.py  check_module_size.py  check_no_pipeline_facade.py  check_non_chat_module_size.py  check_observability_health.py  check_openapi_parity.py  check_pending_store_imports.py  check_python_runtime_surface.py  check_readme_paths.py  check_safe_rule_surface.py  check_shim_age.py  check_stable_exit_fields.py  check_test_db_isolation.py  clean_cache.py  export_openapi.py  ingest_sample.py  init_local_dirs.py  make_analysis_zip.py  make_zip.py  (+20 more)
tests/: README.md  conftest.py
(+885 files in other folders)
